@@ -22,6 +22,7 @@ import com.fasterxml.jackson.databind.introspect.Annotated;
 import com.fasterxml.jackson.databind.introspect.AnnotatedClass;
 import com.fasterxml.jackson.databind.introspect.AnnotatedMember;
 import com.fasterxml.jackson.databind.introspect.AnnotatedMethod;
+import com.fasterxml.jackson.databind.introspect.AnnotationMap;
 import com.fasterxml.jackson.databind.introspect.BeanPropertyDefinition;
 import com.fasterxml.jackson.databind.introspect.POJOPropertyBuilder;
 import com.fasterxml.jackson.databind.jsontype.NamedType;
@@ -86,6 +87,7 @@ import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static io.swagger.v3.core.jackson.JAXBAnnotationsHelper.JAXB_DEFAULT;
 import static io.swagger.v3.core.util.RefUtils.constructRef;
 
 public class ModelResolver extends AbstractModelConverter implements ModelConverter {
@@ -95,12 +97,12 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     public static final String SET_PROPERTY_OF_COMPOSED_MODEL_AS_SIBLING = "composed-model-properties-as-sibiling";
     public static final String SET_PROPERTY_OF_ENUMS_AS_REF = "enums-as-ref";
 
-    public static boolean composedModelPropertiesAsSibling = System.getProperty(SET_PROPERTY_OF_COMPOSED_MODEL_AS_SIBLING) != null ? true : false;
+    public static boolean composedModelPropertiesAsSibling = System.getProperty(SET_PROPERTY_OF_COMPOSED_MODEL_AS_SIBLING) != null;
 
     /**
      * Allows all enums to be resolved as a reference to a scheme added to the components section.
      */
-    public static boolean enumsAsRef = System.getProperty(SET_PROPERTY_OF_ENUMS_AS_REF) != null ? true : false;
+    public static boolean enumsAsRef = System.getProperty(SET_PROPERTY_OF_ENUMS_AS_REF) != null;
 
     public ModelResolver(ObjectMapper mapper) {
         super(mapper);
@@ -446,7 +448,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                         for (Annotation annotation : annotatedType.getCtxAnnotations()) {
                             if (annotation instanceof XmlElement) {
                                 XmlElement xmlElement = (XmlElement) annotation;
-                                if (xmlElement != null && xmlElement.name() != null && !"".equals(xmlElement.name()) && !"##default".equals(xmlElement.name())) {
+                                if (xmlElement != null && xmlElement.name() != null && !"".equals(xmlElement.name()) && !JAXB_DEFAULT.equals(xmlElement.name())) {
                                     XML xml = items.getXml() != null ? items.getXml() : new XML();
                                     xml.setName(xmlElement.name());
                                     items.setXml(xml);
@@ -521,14 +523,14 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         final XmlAccessorType xmlAccessorTypeAnnotation = beanDesc.getClassAnnotations().get(XmlAccessorType.class);
 
         // see if @JsonIgnoreProperties exist
-        Set<String> propertiesToIgnore = new HashSet<String>();
+        Set<String> propertiesToIgnore = new HashSet<>();
         JsonIgnoreProperties ignoreProperties = beanDesc.getClassAnnotations().get(JsonIgnoreProperties.class);
         if (ignoreProperties != null) {
             propertiesToIgnore.addAll(Arrays.asList(ignoreProperties.value()));
         }
 
-        List<Schema> props = new ArrayList<Schema>();
-        Map<String, Schema> modelProps = new LinkedHashMap<String, Schema>();
+        List<Schema> props = new ArrayList<>();
+        Map<String, Schema> modelProps = new LinkedHashMap<>();
 
         List<BeanPropertyDefinition> properties = beanDesc.findProperties();
         List<String> ignoredProps = getIgnoredProperties(beanDesc);
@@ -579,9 +581,12 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
             if (member != null && !ignore(member, xmlAccessorTypeAnnotation, propName, propertiesToIgnore)) {
 
-                List<Annotation> annotationList = new ArrayList<Annotation>();
-                for (Annotation a : member.annotations()) {
-                    annotationList.add(a);
+                List<Annotation> annotationList = new ArrayList<>();
+                AnnotationMap annotationMap = member.getAllAnnotations();
+                if (annotationMap != null) {
+                    for (Annotation a : annotationMap.annotations()) {
+                        annotationList.add(a);
+                    }
                 }
 
                 annotations = annotationList.toArray(new Annotation[annotationList.size()]);
@@ -640,7 +645,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                         .propertyName(propName);
 
                 final AnnotatedMember propMember = member;
-                aType.jsonUnwrappedHandler((t) -> {
+                aType.jsonUnwrappedHandler(t -> {
                     JsonUnwrapped uw = propMember.getAnnotation(JsonUnwrapped.class);
                     if (uw != null && uw.enabled()) {
                         t
@@ -882,8 +887,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         // use recursion to check for method findJsonValueAccessor existence (Jackson 2.9+)
         // if not found use previous deprecated method which could lead to inaccurate result
         try {
-            Method m = BeanDescription.class.getMethod("findJsonValueAccessor", null);
-            AnnotatedMember jsonValueMember = (AnnotatedMember)m.invoke(beanDesc, null);
+            Method m = BeanDescription.class.getMethod("findJsonValueAccessor");
+            AnnotatedMember jsonValueMember = (AnnotatedMember)m.invoke(beanDesc);
             if (jsonValueMember != null) {
                 return jsonValueMember.getType();
             }
@@ -1052,11 +1057,13 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                             return PrimitiveType.createProperty(propType);
                         } else {
                             List<Annotation> list = new ArrayList<>();
-                            for (Annotation a : propMember.annotations()) {
-                                list.add(a);
+                            AnnotationMap annotationMap = propMember.getAllAnnotations();
+                            if (annotationMap != null) {
+                                for (Annotation a : annotationMap.annotations()) {
+                                    list.add(a);
+                                }
                             }
                             Annotation[] annotations = list.toArray(new Annotation[list.size()]);
-                            Annotation propSchemaOrArray = AnnotationsUtils.mergeSchemaAnnotations(annotations, propType);
                             AnnotatedType aType = new AnnotatedType()
                                     .type(propType)
                                     .ctxAnnotations(annotations)
@@ -1176,7 +1183,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     }
 
     protected void applyBeanValidatorAnnotations(Schema property, Annotation[] annotations, Schema parent) {
-        Map<String, Annotation> annos = new HashMap<String, Annotation>();
+        Map<String, Annotation> annos = new HashMap<>();
         if (annotations != null) {
             for (Annotation anno : annotations) {
                 annos.put(anno.annotationType().getName(), anno);
@@ -1209,8 +1216,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                 property.setMaximum(new BigDecimal(size.max()));
             } else if (property instanceof StringSchema) {
                 StringSchema sp = (StringSchema) property;
-                sp.minLength(new Integer(size.min()));
-                sp.maxLength(new Integer(size.max()));
+                sp.minLength(Integer.valueOf(size.min()));
+                sp.maxLength(Integer.valueOf(size.max()));
             } else if (property instanceof ArraySchema) {
                 ArraySchema sp = (ArraySchema) property;
                 sp.setMinItems(size.min());
@@ -1585,16 +1592,16 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     }
 
     protected BigDecimal resolveMinimum(Annotated a, Annotation[] annotations, io.swagger.v3.oas.annotations.media.Schema schema) {
-        if (schema != null && NumberUtils.isNumber(schema.minimum())) {
-            String filteredMinimum = schema.minimum().replaceAll(Constants.COMMA, StringUtils.EMPTY);
+        if (schema != null && NumberUtils.isCreatable(schema.minimum())) {
+            String filteredMinimum = schema.minimum().replace(Constants.COMMA, StringUtils.EMPTY);
             return new BigDecimal(filteredMinimum);
         }
         return null;
     }
 
     protected BigDecimal resolveMaximum(Annotated a, Annotation[] annotations, io.swagger.v3.oas.annotations.media.Schema schema) {
-        if (schema != null && NumberUtils.isNumber(schema.maximum())) {
-            String filteredMaximum = schema.maximum().replaceAll(Constants.COMMA, StringUtils.EMPTY);
+        if (schema != null && NumberUtils.isCreatable(schema.maximum())) {
+            String filteredMaximum = schema.maximum().replace(Constants.COMMA, StringUtils.EMPTY);
             return new BigDecimal(filteredMaximum);
         }
         return null;
@@ -1759,7 +1766,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
             Discriminator discriminator = new Discriminator()
                     .propertyName(disc);
             if (declaredSchemaAnnotation != null) {
-                DiscriminatorMapping mappings[] = declaredSchemaAnnotation.discriminatorMapping();
+                DiscriminatorMapping[] mappings = declaredSchemaAnnotation.discriminatorMapping();
                 if (mappings != null && mappings.length > 0) {
                     for (DiscriminatorMapping mapping : mappings) {
                         if (!mapping.value().isEmpty() && !mapping.schema().equals(Void.class)) {
@@ -1790,9 +1797,9 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                 }
             }
         }
-        if (rootAnnotation != null && !"".equals(rootAnnotation.name()) && !"##default".equals(rootAnnotation.name())) {
+        if (rootAnnotation != null && !"".equals(rootAnnotation.name()) && !JAXB_DEFAULT.equals(rootAnnotation.name())) {
             XML xml = new XML().name(rootAnnotation.name());
-            if (rootAnnotation.namespace() != null && !"".equals(rootAnnotation.namespace()) && !"##default".equals(rootAnnotation.namespace())) {
+            if (rootAnnotation.namespace() != null && !"".equals(rootAnnotation.namespace()) && !JAXB_DEFAULT.equals(rootAnnotation.namespace())) {
                 xml.namespace(rootAnnotation.namespace());
             }
             return xml;
@@ -1956,9 +1963,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
         Map<String, Object> extensions = resolveExtensions(a, annotations, schemaAnnotation);
         if (extensions != null) {
-            for (String ext : extensions.keySet()) {
-                schema.addExtension(ext, extensions.get(ext));
-            }
+            extensions.forEach(schema::addExtension);
         }
     }
 
@@ -1969,7 +1974,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         if (model.getRequired() == null || model.getRequired().isEmpty()) {
             model.addRequiredItem(propName);
         }
-        if (model.getRequired().stream().noneMatch(s -> propName.equals(s))) {
+        if (model.getRequired().stream().noneMatch(propName::equals)) {
             model.addRequiredItem(propName);
         }
     }
@@ -1994,8 +1999,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
     private List<String> getIgnoredProperties(BeanDescription beanDescription) {
         AnnotationIntrospector introspector = _mapper.getSerializationConfig().getAnnotationIntrospector();
-        String[] ignored = introspector.findPropertiesToIgnore(beanDescription.getClassInfo(), true);
-        return ignored == null ? Collections.emptyList() : Arrays.asList(ignored);
+        Set<String> ignored = introspector.findPropertyIgnorals(beanDescription.getClassInfo()).findIgnoredForSerialization();
+        return ignored == null ? Collections.emptyList() : new ArrayList<>(ignored);
     }
 
     /**
